fix a bug with menu items on mobile

--- a/src/styles/mobile.css
+++ b/src/styles/mobile.css
@@ -21,10 +21,14 @@
 
   .navbar-container .menu-items {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     font-size: 1.2rem;
     color: white;
     width: 100%;
+  }
+
+  .navbar-container .menu-items a {
+    padding: 0px 0px;
   }
 
   .flex-items {
